--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 .DS_Store
 */out/*
 
+/Thesis2025_v1/out/*
+/Thesis2025_v1/Figure/*
+/Thesis2025_v2/out/*
+/Thesis2025_v2/Figure/*
 
+/bibliography/*
+/review/*
+/参考/*
